# pawxy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: package-android.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/pawxy/: ControlActivity.kt  ControlToken.kt  NotificationHelper.kt  PawxyNative.kt  ProxyService.kt  StatusProvider.kt
android/app/src/main/res/drawable/: ic_stat_pawxy.xml
android/app/src/main/res/values/: strings.xml
crates/pawxy-cli/: Cargo.toml
crates/pawxy-cli/src/: main.rs
crates/pawxy-core/: Cargo.toml
crates/pawxy-core/src/: auth.rs  config.rs  error.rs  http_proxy.rs  lib.rs  metrics.rs  server.rs  sniff.rs  socks5.rs  tunnel.rs
crates/pawxy-core/tests/: proxy.rs
crates/pawxy-jni/: Cargo.toml
crates/pawxy-jni/src/: lib.rs
docs/: best-practices.md  mvp.md
scripts/: build-android.sh  check-android-apk-compat.sh  check-best-practices.sh  install-android.sh  install-apk-adb.sh  package-android.sh  pawxyctl  test-android-device-mock.sh  test-android-device.sh  test-android-vm-mock.sh  test-android-vm.sh  test-install-android.sh  test-install-apk-adb.sh  test-package-android.sh  test-pawxyctl.sh  test-public-readiness.sh
