[package]
name = "pawxy-core"
version = "0.2.1"
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
bytes = "1"
httparse = "1"
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
