[package]
name = "pawxy-jni"
version = "0.2.3"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "pawxy_jni"

[dependencies]
once_cell = "1"
parking_lot = "0.12"
pawxy-core = { path = "../pawxy-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jni = "0.21"
